tools/tests/errors/surf_parse_10.experr
error: expected '}' to close the set